# mutualism_coop

./: .gitignore  .pre-commit-config.yaml  .pylintrc  Dockerfile  README.md  manage.py  pyproject.toml
about/: models.py
about/migrations/: 0001_initial.py
about/templates/about/: about_page.html
article/: models.py
article/migrations/: 0001_initial.py
article/templates/article/: article_page.html
home/templates/home/: home_page.html
mutualism_coop/: urls.py  wsgi.py
mutualism_coop/settings/: base.py  dev.py
mutualism_coop/templates/: base.html  header.html
search/templates/search/: search.html
